--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 <main>
   <section aria-labelledby="qui-suis-je">
     <div class="intro-grid">
-      <img src="https://source.unsplash.com/320x320/?portrait,man,coach" alt="Photo professionnelle d'Antoine Bucherie" />
+      <img src="images/photo1.jpg" alt="Photo professionnelle d'Antoine Bucherie" />
       <div class="intro-text">
         <h2 id="qui-suis-je">Qui suis-je ?</h2>
         <p>
