--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Antoine Bucherie – Analyste Vidéo Football</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
-    /* Reset & base */
     *, *::before, *::after {
       box-sizing: border-box;
     }
@@ -79,6 +78,7 @@
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
       transition: background 0.3s ease;
     }
+
     section:hover {
       background: rgba(30, 45, 75, 0.85);
     }
@@ -101,7 +101,6 @@
       line-height: 1.5;
     }
 
-    /* Grid for intro */
     .intro-grid {
       display: flex;
       gap: 40px;
@@ -109,6 +108,7 @@
       flex-wrap: wrap;
       justify-content: center;
     }
+
     .intro-grid img {
       border-radius: 28px;
       width: 320px;
@@ -119,6 +119,7 @@
       transition: transform 0.3s ease;
       flex-shrink: 0;
     }
+
     .intro-grid img:hover, .intro-grid img:focus {
       transform: scale(1.05);
       outline: none;
@@ -129,16 +130,17 @@
       max-width: 700px;
       min-width: 280px;
     }
+
     .intro-text h2 {
       margin-top: 0;
     }
+
     .intro-text p em {
       color: #8ba1cc;
       font-style: italic;
       font-weight: 500;
     }
 
-    /* Buttons */
     .cta-container {
       text-align: center;
       margin-top: 30px;
@@ -167,13 +169,13 @@
       text-decoration: none;
       min-width: 180px;
     }
+
     .cta-btn:hover, .cta-btn:focus {
       background: linear-gradient(135deg, #2a569f, #406ab9);
       box-shadow: 0 8px 22px rgba(32, 65, 130, 0.9);
       outline: none;
     }
 
-    /* Highlight section style */
     .highlight {
       background: linear-gradient(120deg, #1c2d57, #273b7d);
       border-radius: 28px;
@@ -184,6 +186,7 @@
       color: #dbe1f4;
       text-align: center;
     }
+
     .highlight h2 {
       margin-bottom: 24px;
       font-size: 2.4rem;
@@ -191,6 +194,7 @@
       text-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
       letter-spacing: 0.02em;
     }
+
     .highlight p {
       font-size: 1.18rem;
       max-width: 850px;
@@ -199,7 +203,6 @@
       line-height: 1.6;
     }
 
-    /* Gallery images */
     .gallery {
       display: flex;
       gap: 24px;
@@ -207,6 +210,7 @@
       flex-wrap: wrap;
       margin-top: 25px;
     }
+
     .gallery img {
       border-radius: 20px;
       width: 260px;
@@ -217,6 +221,7 @@
       aspect-ratio: 4 / 3;
       cursor: pointer;
     }
+
     .gallery img:hover, .gallery img:focus {
       transform: scale(1.08);
       outline: none;
@@ -225,63 +230,112 @@
     /* Responsive */
     @media (max-width: 900px) {
       main {
-        margin: 40px 15px 60px;
+        margin: 30px 12px 50px;
+        padding: 0;
       }
+
       section {
-        padding: 32px 20px 38px;
+        padding: 24px 16px 30px;
+        margin-bottom: 40px;
       }
+
       .intro-grid {
         flex-direction: column;
+        gap: 24px;
       }
-      .intro-text {
-        max-width: 100%;
-      }
+
       .intro-grid img {
-        max-width: 80vw;
+        max-width: 100%;
         width: auto;
       }
-      .cta-container {
-        gap: 14px;
+
+      .intro-text {
+        padding: 0 8px;
+        max-width: 100%;
+        text-align: justify;
       }
+
+      .cta-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+      }
+
       .cta-btn {
-        min-width: 140px;
-        padding: 12px 28px;
-        font-size: 1.05rem;
+        width: 100%;
+        max-width: 320px;
+        padding: 12px 20px;
+        font-size: 1rem;
+        border-radius: 24px;
+      }
+
+      .gallery {
+        justify-content: center;
+        gap: 16px;
+      }
+
+      .gallery img {
+        width: 100%;
+        max-width: 300px;
+        height: auto;
+        aspect-ratio: auto;
       }
     }
 
     @media (max-width: 480px) {
       body {
         line-height: 1.4;
+        padding: 0;
       }
+
       header h1 {
-        font-size: 2.4rem;
+        font-size: 2.2rem;
       }
+
       header p {
-        font-size: 1rem;
-      }
-      section h2 {
-        font-size: 1.6rem;
-      }
-      section p {
-        font-size: 1rem;
-      }
-      .cta-btn {
-        padding: 12px 22px;
         font-size: 0.95rem;
-        border-radius: 20px;
-        min-width: 120px;
+        padding: 0 10px;
       }
+
+      section h2 {
+        font-size: 1.5rem;
+        text-align: center;
+      }
+
+      section p {
+        font-size: 0.95rem;
+      }
+
+      .cta-btn {
+        font-size: 0.95rem;
+        padding: 10px 18px;
+        min-width: unset;
+      }
+
       .gallery {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
         scroll-snap-type: x mandatory;
+        padding-left: 8px;
       }
+
       .gallery img {
         scroll-snap-align: center;
         flex: 0 0 auto;
         width: 180px;
-        margin-right: 14px;
+        margin-right: 12px;
+      }
+
+      .highlight {
+        padding: 30px 16px;
+      }
+
+      .highlight h2 {
+        font-size: 1.8rem;
+      }
+
+      .highlight p {
+        font-size: 1rem;
       }
     }
 
@@ -318,8 +372,8 @@
       </div>
     </div>
     <div class="cta-container" role="group" aria-label="Contacts pour Antoine Bucherie">
-      <a class="cta-btn" href="sms:+33612345678" aria-label="Envoyer un SMS à Antoine"> Envoyer un SMS</a>
-      <a class="cta-btn" href="tel:+33612345678" aria-label="Appelons-nous"> Appelons-nous</a>
+      <a class="cta-btn" href="sms:+33612345678">Envoyer un SMS</a>
+      <a class="cta-btn" href="tel:+33612345678">Appelons-nous</a>
     </div>
   </section>
 
@@ -328,23 +382,23 @@
     <p>
       Un accompagnement visuel et structuré tout au long de la saison : analyse de vos matchs pour identifier axes d’amélioration, mettre en valeur vos forces et renforcer votre projet de jeu. Vous bénéficiez de rapports clairs, séquences commentées, et suivi ultra personnalisé. C'est comme un membre du staff supplémentaire.
     </p>
-    <div class="gallery" aria-label="Images illustration analyse vidéo collective">
+    <div class="gallery">
       <img src="photo2.jpg" alt="Analyse tactique d'une équipe de football" />
       <img src="photo3.jpg" alt="Match de football en action" />
       <img src="photo4.jpg" alt="Analyse vidéo sportive" />
     </div>
     <div class="cta-container">
-      <a class="cta-btn" href="sms:+33612345678" aria-label="Travailler avec Antoine pour analyse collective">Discutons-en ensemble</a>
+      <a class="cta-btn" href="sms:+33612345678">Discutons-en ensemble</a>
     </div>
   </section>
 
-  <section aria-labelledby="analyse-collective">
-    <h2 id="analyse-collective">Un match décisif à préparer ?</h2>
+  <section aria-labelledby="match-decisif">
+    <h2 id="match-decisif">Un match décisif à préparer ?</h2>
     <p>
       Pour un match crucial en vue du maintien ou de la montée, chaque détail compte. J’élabore une analyse ciblée et pragmatique qui permet à vos joueurs d’aborder la rencontre avec lucidité, clarté tactique et confiance : l'analyse vidéo peut changer drastiquement l'issue de votre saison.
     </p>
     <div class="cta-container">
-      <a class="cta-btn" href="tel:+33612345678" aria-label="Discuter avec Antoine pour préparation de match">Contactez-moi</a>
+      <a class="cta-btn" href="tel:+33612345678">Contactez-moi</a>
     </div>
   </section>
 
@@ -353,12 +407,12 @@
     <p>
       Identifier les points faibles, anticiper les habitudes, surprendre l’adversaire : je propose une étude complète de vos prochains opposants, vous permettant d’adapter votre plan de jeu pour prendre l’avantage dès les premières minutes.
     </p>
-    <div class="gallery" aria-label="Images illustration analyse adversaire">
+    <div class="gallery">
       <img src="photo5.jpg" alt="Analyse des adversaires en football" />
       <img src="photo2.jpg" alt="Stratégie d'équipe en football" />
     </div>
     <div class="cta-container">
-      <a class="cta-btn" href="sms:+33612345678" aria-label="Commander une analyse adversaire">Commander une analyse adverse</a>
+      <a class="cta-btn" href="sms:+33612345678">Commander une analyse adverse</a>
     </div>
   </section>
 
@@ -367,12 +421,12 @@
     <p>
       Valoriser un joueur, améliorer sa lecture de jeu ou cibler un poste : une analyse personnalisée met en lumière les forces et axes de progression. Outil idéal pour accompagner formation ou retour à la compétition.
     </p>
-    <div class="gallery" aria-label="Images illustration analyse individuelle">
+    <div class="gallery">
       <img src="photo3.jpg" alt="Analyse individuelle d'un joueur de football" />
       <img src="photo4.jpg" alt="Entraînement individuel football" />
     </div>
     <div class="cta-container">
-      <a class="cta-btn" href="tel:+33612345678" aria-label="Échanger sur un joueur">Parlons-en ensemble</a>
+      <a class="cta-btn" href="tel:+33612345678">Parlons-en ensemble</a>
     </div>
   </section>
 </main>
