--- a/index.html
+++ b/index.html
@@ -361,21 +361,77 @@
 
 <main>
   <section aria-labelledby="qui-suis-je">
-    <div class="intro-grid">
-      <img src="photo1.JPG" alt="Photo professionnelle d'Antoine Bucherie" />
-      <div class="intro-text">
-        <h2 id="qui-suis-je">Qui suis-je ?</h2>
-        <p>
-          Diplômé STAPS et analyste vidéo à l'Université de Bordeaux, j’ai collaboré avec le <strong>FC Girondins de Bordeaux</strong> avant d'étendre mes services aux <strong>clubs amateurs de Nouvelle-Aquitaine et d’Occitanie</strong>. Mon objectif : vous fournir un regard technique, structuré et extérieur, pour soutenir votre projet sportif avec rigueur et engagement.
-        </p>
-        <p><em>Tarifs attractifs et TVA non applicable</em></p>
-      </div>
+  <div class="intro-grid">
+    <img src="photo1.JPG" alt="Photo professionnelle d'Antoine Bucherie" />
+    <div class="intro-text">
+      <h2 id="qui-suis-je">Qui suis-je ?</h2>
+      <p>
+        Diplômé STAPS et analyste vidéo à l'Université de Bordeaux, j’ai collaboré avec le <strong>FC Girondins de Bordeaux</strong> avant d'étendre mes services aux <strong>clubs amateurs de Nouvelle-Aquitaine et d’Occitanie</strong>. Mon objectif : vous fournir un regard technique, structuré et extérieur, pour soutenir votre projet sportif avec rigueur et engagement.
+      </p>
+      <p><em>Tarifs attractifs et TVA non applicable</em></p>
+      
+      <!-- Boutons rapprochés -->
+      <div class="cta-container" role="group" aria-label="Contacts pour Antoine Bucherie" style="margin-top: 10px;">
+        <a class="cta-btn" href="sms:+33612345678">Envoyer un SMS</a>
+        <a class="cta-btn" href="tel:+33612345678">Appelons-nous</a>
+  </div>
+</section>
+
+  
+<section aria-labelledby="grands-en-parlent">
+  <h2 id="grands-en-parlent">Les plus grands en parlent</h2>
+  <div style="
+    display: flex;
+    overflow-x: auto;
+    gap: 24px;
+    scroll-snap-type: x mandatory;
+    padding: 16px 0;
+    -webkit-overflow-scrolling: touch;
+  ">
+    <div style="
+      flex: 0 0 280px;
+      background: rgba(30, 45, 75, 0.85);
+      border-radius: 24px;
+      padding: 20px;
+      scroll-snap-align: start;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
+      text-align: center;
+    ">
+      <img src="guardiola.jpg" alt="Pep Guardiola" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; margin-bottom: 16px;" />
+      <p style="color: #d0d7e6; font-style: italic;">"L’analyse vidéo est aujourd’hui indispensable. Elle permet de comprendre le jeu sous un autre angle."</p>
+      <p style="margin-top: 12px; font-weight: 600; color: #c4d0e7;">Pep Guardiola</p>
     </div>
-    <div class="cta-container" role="group" aria-label="Contacts pour Antoine Bucherie">
-      <a class="cta-btn" href="sms:+33612345678">Envoyer un SMS</a>
-      <a class="cta-btn" href="tel:+33612345678">Appelons-nous</a>
+
+    <div style="
+      flex: 0 0 280px;
+      background: rgba(30, 45, 75, 0.85);
+      border-radius: 24px;
+      padding: 20px;
+      scroll-snap-align: start;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
+      text-align: center;
+    ">
+      <img src="deschamps.jpg" alt="Didier Deschamps" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; margin-bottom: 16px;" />
+      <p style="color: #d0d7e6; font-style: italic;">"C’est un outil qui apporte des détails essentiels à la performance individuelle et collective."</p>
+      <p style="margin-top: 12px; font-weight: 600; color: #c4d0e7;">Didier Deschamps</p>
     </div>
-  </section>
+
+    <div style="
+      flex: 0 0 280px;
+      background: rgba(30, 45, 75, 0.85);
+      border-radius: 24px;
+      padding: 20px;
+      scroll-snap-align: start;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
+      text-align: center;
+    ">
+      <img src="ancelotti.jpg" alt="Carlo Ancelotti" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; margin-bottom: 16px;" />
+      <p style="color: #d0d7e6; font-style: italic;">"Une bonne vidéo vaut plus que mille mots. Elle parle directement aux joueurs."</p>
+      <p style="margin-top: 12px; font-weight: 600; color: #c4d0e7;">Carlo Ancelotti</p>
+    </div>
+  </div>
+</section>
+
 
   <section aria-labelledby="analyse-collective">
     <h2 id="analyse-collective">Analyse vidéo collective</h2>
@@ -383,9 +439,7 @@
       Un accompagnement visuel et structuré tout au long de la saison : analyse de vos matchs pour identifier axes d’amélioration, mettre en valeur vos forces et renforcer votre projet de jeu. Vous bénéficiez de rapports clairs, séquences commentées, et suivi ultra personnalisé. C'est comme un membre du staff supplémentaire.
     </p>
     <div class="gallery">
-      <img src="photo2.jpg" alt="Analyse tactique d'une équipe de football" />
-      <img src="photo3.jpg" alt="Match de football en action" />
-      <img src="photo4.jpg" alt="Analyse vidéo sportive" />
+      <img src="enrique.jpg" alt="Luis Enrique" />
     </div>
     <div class="cta-container">
       <a class="cta-btn" href="sms:+33612345678">Discutons-en ensemble</a>
@@ -397,6 +451,9 @@
     <p>
       Pour un match crucial en vue du maintien ou de la montée, chaque détail compte. J’élabore une analyse ciblée et pragmatique qui permet à vos joueurs d’aborder la rencontre avec lucidité, clarté tactique et confiance : l'analyse vidéo peut changer drastiquement l'issue de votre saison.
     </p>
+    <div class="gallery">
+      <img src="ancelottia.jpg" alt="Carlo Ancelotti" />
+    </div>
     <div class="cta-container">
       <a class="cta-btn" href="tel:+33612345678">Contactez-moi</a>
     </div>
@@ -408,8 +465,7 @@
       Identifier les points faibles, anticiper les habitudes, surprendre l’adversaire : je propose une étude complète de vos prochains opposants, vous permettant d’adapter votre plan de jeu pour prendre l’avantage dès les premières minutes.
     </p>
     <div class="gallery">
-      <img src="photo5.jpg" alt="Analyse des adversaires en football" />
-      <img src="photo2.jpg" alt="Stratégie d'équipe en football" />
+      <img src="guardiola.jpg" alt="Pep Guardiola" />
     </div>
     <div class="cta-container">
       <a class="cta-btn" href="sms:+33612345678">Commander une analyse adverse</a>
@@ -422,13 +478,14 @@
       Valoriser un joueur, améliorer sa lecture de jeu ou cibler un poste : une analyse personnalisée met en lumière les forces et axes de progression. Outil idéal pour accompagner formation ou retour à la compétition.
     </p>
     <div class="gallery">
-      <img src="photo3.jpg" alt="Analyse individuelle d'un joueur de football" />
-      <img src="photo4.jpg" alt="Entraînement individuel football" />
+      <img src="messi.jpg" alt="Lionel Messi" />
     </div>
     <div class="cta-container">
       <a class="cta-btn" href="tel:+33612345678">Parlons-en ensemble</a>
     </div>
   </section>
+
+
 </main>
 
 <footer>
