--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
       box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
       text-align: center;
     ">
-      <img src="guardiola.jpg" alt="Pep Guardiola" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; margin-bottom: 16px;" />
+      <img src="guardiola.png" alt="Pep Guardiola" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; margin-bottom: 16px;" />
       <p style="color: #d0d7e6; font-style: italic;">"L’analyse vidéo est aujourd’hui indispensable. Elle permet de comprendre le jeu sous un autre angle."</p>
       <p style="margin-top: 12px; font-weight: 600; color: #c4d0e7;">Pep Guardiola</p>
     </div>
@@ -411,7 +411,7 @@
       box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
       text-align: center;
     ">
-      <img src="deschamps.jpg" alt="Didier Deschamps" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; margin-bottom: 16px;" />
+      <img src="deschamps.png" alt="Didier Deschamps" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; margin-bottom: 16px;" />
       <p style="color: #d0d7e6; font-style: italic;">"C’est un outil qui apporte des détails essentiels à la performance individuelle et collective."</p>
       <p style="margin-top: 12px; font-weight: 600; color: #c4d0e7;">Didier Deschamps</p>
     </div>
@@ -439,7 +439,7 @@
       Un accompagnement visuel et structuré tout au long de la saison : analyse de vos matchs pour identifier axes d’amélioration, mettre en valeur vos forces et renforcer votre projet de jeu. Vous bénéficiez de rapports clairs, séquences commentées, et suivi ultra personnalisé. C'est comme un membre du staff supplémentaire.
     </p>
     <div class="gallery">
-      <img src="enrique.jpg" alt="Luis Enrique" />
+      <img src="enrique.png" alt="Luis Enrique" />
     </div>
     <div class="cta-container">
       <a class="cta-btn" href="sms:+33612345678">Discutons-en ensemble</a>
@@ -465,7 +465,7 @@
       Identifier les points faibles, anticiper les habitudes, surprendre l’adversaire : je propose une étude complète de vos prochains opposants, vous permettant d’adapter votre plan de jeu pour prendre l’avantage dès les premières minutes.
     </p>
     <div class="gallery">
-      <img src="guardiola.jpg" alt="Pep Guardiola" />
+      <img src="guardiola.png" alt="Pep Guardiola" />
     </div>
     <div class="cta-container">
       <a class="cta-btn" href="sms:+33612345678">Commander une analyse adverse</a>
