--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
       Pour un match crucial en vue du maintien ou de la montée, chaque détail compte. J’élabore une analyse ciblée et pragmatique qui permet à vos joueurs d’aborder la rencontre avec lucidité, clarté tactique et confiance : l'analyse vidéo peut changer drastiquement l'issue de votre saison.
     </p>
     <div class="gallery">
-      <img src="ancelottia.jpg" alt="Carlo Ancelotti" />
+      <img src="ancelotti.jpg" alt="Carlo Ancelotti" />
     </div>
     <div class="cta-container">
       <a class="cta-btn" href="tel:+33612345678">Contactez-moi</a>
