--- a/index.html
+++ b/index.html
@@ -353,11 +353,17 @@
   </style>
 </head>
 <body>
-<main>
 <header>
-  <h1>Antoine Bucherie</h1>
-  <p>L’analyse vidéo au service des clubs amateurs et semi-pro</p>
+  <h1 style="margin-bottom: 0;">
+    Perf'Analyse <span style="font-size: 0.2em; font-style: italic;">by Antoine Bucherie</span>
+  </h1>
+  <p style="margin-top: 0.3em;">L’analyse vidéo au service des clubs amateurs et semi-pro</p>
 </header>
+
+
+
+
+<main>
 
 <!-- Nouvelle section mise en avant -->
 <section aria-labelledby="valeur-analyse" class="highlight-section" style="padding: 1.5rem 0;">
@@ -464,78 +470,188 @@
     </div>
   </section>
 
+
 <section id="tarifs" class="tarifs">
   <h2><strong>Mes tarifs en 3 étapes</strong></h2>
 
-  <div class="etape">
-    <h3><strong>Étape 1 : Nombre d’équipes</strong></h3>
-    <ul>
-      <li><strong>1 équipe</strong> : tarif standard</li>
-      <li><strong>2 équipes</strong> : <strong>-20 %</strong> sur la 2<sup>e</sup> équipe</li>
-      <li><strong>3 équipes ou +</strong> : tarif sur devis personnalisé</li>
-    </ul>
-  </div>
-
-  <div class="etape">
-    <h3><strong>Étape 2 : Formule d’abonnement</strong></h3>
-    <div class="formule">
-      <h4>🔘 À l’unité</h4>
+  <!-- Étape 1 -->
+  <div class="etape-card">
+    <button class="etape-header">
+      <h3><strong>Étape 1 : Nombre d’équipes</strong></h3>
+      <span class="toggle-icon">+</span>
+    </button>
+    <div class="etape-content">
       <ul>
-        <li>Analyse ponctuelle (1 match, 1 format)</li>
-        <li>Pas d’engagement</li>
-        <li>Livraison sous 48–72h</li>
-      </ul>
-    </div>
-    <div class="formule">
-      <h4>🔘 Mensuel</h4>
-      <ul>
-        <li>4 à 5 matchs analysés / mois</li>
-        <li>Suivi continu et échanges avec le staff</li>
-      </ul>
-    </div>
-    <div class="formule">
-      <h4>🔘 Annuel</h4>
-      <ul>
-        <li>Jusqu’à 5 analyses / mois</li>
-        <li><strong>Bonus</strong> : 1 analyse gratuite / trimestre</li>
-        <li>Accès prioritaire, rapports comparatifs</li>
-      </ul>
-    </div>
-    <div class="formule">
-      <h4>🔘 Pack de matchs</h4>
-      <ul>
-        <li>5 / 10 / 15 matchs à consommer librement</li>
-        <li>Bon compromis entre liberté et engagement</li>
+        <li><strong>1 équipe</strong> : tarif standard</li>
+        <li><strong>2 équipes</strong> : <strong>-20 %</strong> sur la 2<sup>e</sup> équipe</li>
+        <li><strong>3 équipes ou +</strong> : tarif sur devis personnalisé</li>
       </ul>
     </div>
   </div>
 
-  <div class="etape">
-    <h3><strong>Étape 3 : Format d’analyse</strong></h3>
-    <div class="format">
+  <!-- Étape 2 -->
+  <div class="etape-card">
+    <button class="etape-header">
+      <h3><strong>Étape 2 : Formule d’abonnement</strong></h3>
+      <span class="toggle-icon">+</span>
+    </button>
+    <div class="etape-content">
+      <div class="formule">
+        <h4>🔘 À l’unité</h4>
+        <ul>
+          <li>Analyse ponctuelle (1 match, 1 format)</li>
+          <li>Pas d’engagement</li>
+          <li>Livraison sous 48–72h</li>
+        </ul>
+      </div>
+      <div class="formule">
+        <h4>🔘 Mensuel</h4>
+        <ul>
+          <li>4 à 5 matchs analysés / mois</li>
+          <li>Suivi continu et échanges avec le staff</li>
+        </ul>
+      </div>
+      <div class="formule">
+        <h4>🔘 Annuel</h4>
+        <ul>
+          <li>Jusqu’à 5 analyses / mois</li>
+          <li><strong>Bonus</strong> : 1 analyse gratuite / trimestre</li>
+          <li>Accès prioritaire, rapports comparatifs</li>
+        </ul>
+      </div>
+      <div class="formule">
+        <h4>🔘 Pack de matchs</h4>
+        <ul>
+          <li>5 / 10 / 15 matchs à consommer librement</li>
+          <li>Bon compromis entre liberté et engagement</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- Étape 3 -->
+<div class="etape-card">
+  <button class="etape-header">
+    <h3><strong>Étape 3 : Format d’analyse</strong></h3>
+    <span class="toggle-icon">+</span>
+  </button>
+  <div class="etape-content">
+    <div class="formule">
       <h4>🔘 Analyse collective</h4>
-      <p>Améliorer les performances collectives et renforcer le projet de jeu</p>
+      <ul>
+        <li>Améliorer les performances collectives</li>
+        <li>Renforcer le projet de jeu</li>
+      </ul>
     </div>
-    <div class="format">
+    <div class="formule">
       <h4>🔘 Analyse individuelle</h4>
-      <p>Valoriser un joueur, affiner son poste, accompagner son évolution</p>
+      <ul>
+        <li>Valoriser un joueur</li>
+        <li>Affiner son poste</li>
+        <li>Accompagner son évolution</li>
+      </ul>
     </div>
-    <div class="format">
+    <div class="formule">
       <h4>🔘 Analyse de l’adversaire</h4>
-      <p>Anticiper les automatismes, adapter le plan de jeu</p>
+      <ul>
+        <li>Anticiper les automatismes</li>
+        <li>Adapter le plan de jeu</li>
+      </ul>
     </div>
-    <div class="format">
+    <div class="formule">
       <h4>🔘 Pack complet</h4>
-      <p>Les 3 formats réunis pour une préparation optimale</p>
+      <ul>
+        <li>Les 3 formats réunis</li>
+        <li>Préparation optimale</li>
+      </ul>
     </div>
-    <p class="inclus"><strong>Inclus dans chaque format</strong> : séquences vidéo commentées, fiche d’analyse synthétique, rapport vidéo</p>
-    
-    <!-- Boutons rapprochés -->
-      <div class="cta-container" role="group" aria-label="Contacts pour Antoine Bucherie" style="margin-top: 10px;">
-        <a class="cta-btn" href="sms:+33 6 99 33 53 52">Envoyer un SMS</a>
-        <a class="cta-btn" href="tel:+33 6 99 33 53 52">Appelons-nous</a>
+    <p class="formule" style="color: black;"><strong>Inclus dans chaque format</strong> : séquences vidéo commentées, fiche d’analyse synthétique, rapport vidéo</p>
+
   </div>
+</div>
+<br>
+<div class="cta-container" role="group" aria-label="Contacts pour Antoine Bucherie" style="margin-top: 10px;">
+      <a class="cta-btn" href="sms:+33 6 99 33 53 52">Envoyer un SMS</a>
+      <a class="cta-btn" href="tel:+33 6 99 33 53 52">Appelons-nous</a>
+    </div>
+
 </section>
+
+<style>
+.tarifs {
+  max-width: 800px;
+  margin: auto;
+  font-family: sans-serif;
+}
+
+.etape-card {
+  border: 1px solid #1d3557;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  overflow: hidden;
+  background: #f8f9fa;
+}
+
+.etape-header {
+  width: 100%;
+  background: #1d3557;
+  color: white;
+  padding: 12px;
+  font-size: 1.1em;
+  text-align: left;
+  border: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+
+.toggle-icon {
+  font-weight: bold;
+  font-size: 1.3em;
+}
+
+.etape-content {
+  display: none;
+  padding: 15px;
+  background: white;
+  color: #333;
+}
+
+.etape-content ul {
+  margin: 0;
+  padding-left: 20px;
+}
+
+.formule, .format {
+  margin-bottom: 12px;
+}
+
+.cta-container {
+  display: flex;
+  gap: 10px;
+}
+</style>
+
+<script>
+document.querySelectorAll('.etape-header').forEach(header => {
+  header.addEventListener('click', () => {
+    const content = header.nextElementSibling;
+    const icon = header.querySelector('.toggle-icon');
+
+    if (content.style.display === 'block') {
+      content.style.display = 'none';
+      icon.textContent = '+';
+    } else {
+      document.querySelectorAll('.etape-content').forEach(c => c.style.display = 'none');
+      document.querySelectorAll('.toggle-icon').forEach(i => i.textContent = '+');
+      content.style.display = 'block';
+      icon.textContent = '–';
+    }
+  });
+});
+</script>
+
 
 
 
