--- a/index.html
+++ b/index.html
@@ -574,13 +574,12 @@
       <a class="cta-btn" href="sms:+33 6 99 33 53 52">Envoyer un SMS</a>
       <a class="cta-btn" href="tel:+33 6 99 33 53 52">Appelons-nous</a>
     </div>
-
 </section>
 
 <style>
 .tarifs {
   max-width: 800px;
-  margin: auto;
+  margin: 0 auto;
   font-family: sans-serif;
 }
 
@@ -631,6 +630,8 @@
   display: flex;
   gap: 10px;
 }
+
+
 </style>
 
 <script>
@@ -653,7 +654,7 @@ document.querySelectorAll('.etape-header').forEach(header => {
 </script>
 
 
-
+<br>
 
 <section aria-labelledby="avis">
   <h2 id="grands-en-parlent">Ils ont donné leur avis</h2>
