--- a/index.html
+++ b/index.html
@@ -472,115 +472,124 @@
 
 
 <section id="tarifs" class="tarifs">
-  <h2><strong>Mes tarifs en 3 étapes</strong></h2>
+  <div class="tarifs-content" style="max-width: 800px; margin: 0 auto; padding: 0 1rem;">
+    <h2><strong>Mes tarifs en 3 étapes</strong></h2>
 
-  <!-- Étape 1 -->
-  <div class="etape-card">
-    <button class="etape-header">
-      <h3><strong>Étape 1 : Nombre d’équipes</strong></h3>
-      <span class="toggle-icon">+</span>
-    </button>
-    <div class="etape-content">
-      <ul>
-        <li><strong>1 équipe</strong> : tarif standard</li>
-        <li><strong>2 équipes</strong> : <strong>-20 %</strong> sur la 2<sup>e</sup> équipe</li>
-        <li><strong>3 équipes ou +</strong> : tarif sur devis personnalisé</li>
-      </ul>
-    </div>
-  </div>
-
-  <!-- Étape 2 -->
-  <div class="etape-card">
-    <button class="etape-header">
-      <h3><strong>Étape 2 : Formule d’abonnement</strong></h3>
-      <span class="toggle-icon">+</span>
-    </button>
-    <div class="etape-content">
-      <div class="formule">
-        <h4>🔘 À l’unité</h4>
+    <!-- Étape 1 -->
+    <div class="etape-card">
+      <button class="etape-header">
+        <h3><strong>Étape 1 : Nombre d’équipes</strong></h3>
+        <span class="toggle-icon">+</span>
+      </button>
+      <div class="etape-content">
         <ul>
-          <li>Analyse ponctuelle (1 match, 1 format)</li>
-          <li>Pas d’engagement</li>
-          <li>Livraison sous 48–72h</li>
-        </ul>
-      </div>
-      <div class="formule">
-        <h4>🔘 Mensuel</h4>
-        <ul>
-          <li>4 à 5 matchs analysés / mois</li>
-          <li>Suivi continu et échanges avec le staff</li>
-        </ul>
-      </div>
-      <div class="formule">
-        <h4>🔘 Annuel</h4>
-        <ul>
-          <li>Jusqu’à 5 analyses / mois</li>
-          <li><strong>Bonus</strong> : 1 analyse gratuite / trimestre</li>
-          <li>Accès prioritaire, rapports comparatifs</li>
-        </ul>
-      </div>
-      <div class="formule">
-        <h4>🔘 Pack de matchs</h4>
-        <ul>
-          <li>5 / 10 / 15 matchs à consommer librement</li>
-          <li>Bon compromis entre liberté et engagement</li>
+          <li><strong>1 équipe</strong> : tarif standard</li>
+          <li><strong>2 équipes</strong> : <strong>-20 %</strong> sur la 2<sup>e</sup> équipe</li>
+          <li><strong>3 équipes ou +</strong> : tarif sur devis personnalisé</li>
         </ul>
       </div>
     </div>
-  </div>
 
-  <!-- Étape 3 -->
-<div class="etape-card">
-  <button class="etape-header">
-    <h3><strong>Étape 3 : Format d’analyse</strong></h3>
-    <span class="toggle-icon">+</span>
-  </button>
-  <div class="etape-content">
-    <div class="formule">
-      <h4>🔘 Analyse collective</h4>
-      <ul>
-        <li>Améliorer les performances collectives</li>
-        <li>Renforcer le projet de jeu</li>
-      </ul>
+    <!-- Étape 2 -->
+    <div class="etape-card">
+      <button class="etape-header">
+        <h3><strong>Étape 2 : Formule d’abonnement</strong></h3>
+        <span class="toggle-icon">+</span>
+      </button>
+      <div class="etape-content">
+        <div class="formule">
+          <h4>🔘 À l’unité</h4>
+          <ul>
+            <li>Analyse ponctuelle (1 match, 1 format)</li>
+            <li>Pas d’engagement</li>
+            <li>Livraison sous 48–72h</li>
+          </ul>
+        </div>
+        <div class="formule">
+          <h4>🔘 Mensuel</h4>
+          <ul>
+            <li>4 à 5 matchs analysés / mois</li>
+            <li>Suivi continu et échanges avec le staff</li>
+          </ul>
+        </div>
+        <div class="formule">
+          <h4>🔘 Annuel</h4>
+          <ul>
+            <li>Jusqu’à 5 analyses / mois</li>
+            <li><strong>Bonus</strong> : 1 analyse gratuite / trimestre</li>
+            <li>Accès prioritaire, rapports comparatifs</li>
+          </ul>
+        </div>
+        <div class="formule">
+          <h4>🔘 Pack de matchs</h4>
+          <ul>
+            <li>5 / 10 / 15 matchs à consommer librement</li>
+            <li>Bon compromis entre liberté et engagement</li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="formule">
-      <h4>🔘 Analyse individuelle</h4>
-      <ul>
-        <li>Valoriser un joueur</li>
-        <li>Affiner son poste</li>
-        <li>Accompagner son évolution</li>
-      </ul>
-    </div>
-    <div class="formule">
-      <h4>🔘 Analyse de l’adversaire</h4>
-      <ul>
-        <li>Anticiper les automatismes</li>
-        <li>Adapter le plan de jeu</li>
-      </ul>
-    </div>
-    <div class="formule">
-      <h4>🔘 Pack complet</h4>
-      <ul>
-        <li>Les 3 formats réunis</li>
-        <li>Préparation optimale</li>
-      </ul>
-    </div>
-    <p class="formule" style="color: black;"><strong>Inclus dans chaque format</strong> : séquences vidéo commentées, fiche d’analyse synthétique, rapport vidéo</p>
 
-  </div>
-</div>
-<br>
-<div class="cta-container" role="group" aria-label="Contacts pour Antoine Bucherie" style="margin-top: 10px;">
+    <!-- Étape 3 -->
+    <div class="etape-card">
+      <button class="etape-header">
+        <h3><strong>Étape 3 : Format d’analyse</strong></h3>
+        <span class="toggle-icon">+</span>
+      </button>
+      <div class="etape-content">
+        <div class="formule">
+          <h4>🔘 Analyse collective</h4>
+          <ul>
+            <li>Améliorer les performances collectives</li>
+            <li>Renforcer le projet de jeu</li>
+          </ul>
+        </div>
+        <div class="formule">
+          <h4>🔘 Analyse individuelle</h4>
+          <ul>
+            <li>Valoriser un joueur</li>
+            <li>Affiner son poste</li>
+            <li>Accompagner son évolution</li>
+          </ul>
+        </div>
+        <div class="formule">
+          <h4>🔘 Analyse de l’adversaire</h4>
+          <ul>
+            <li>Anticiper les automatismes</li>
+            <li>Adapter le plan de jeu</li>
+          </ul>
+        </div>
+        <div class="formule">
+          <h4>🔘 Pack complet</h4>
+          <ul>
+            <li>Les 3 formats réunis</li>
+            <li>Préparation optimale</li>
+          </ul>
+        </div>
+        <p class="formule" style="color: black;">
+          <strong>Inclus dans chaque format</strong> : séquences vidéo commentées, fiche d’analyse synthétique, rapport vidéo
+        </p>
+      </div>
+    </div>
+
+    <br>
+    <div class="cta-container" role="group" aria-label="Contacts pour Antoine Bucherie" style="margin-top: 10px;">
       <a class="cta-btn" href="sms:+33 6 99 33 53 52">Envoyer un SMS</a>
       <a class="cta-btn" href="tel:+33 6 99 33 53 52">Appelons-nous</a>
     </div>
+  </div>
 </section>
 
 <style>
 .tarifs {
+  width: 100%;
+  font-family: sans-serif;
+}
+
+.tarifs-content {
   max-width: 800px;
   margin: 0 auto;
-  font-family: sans-serif;
+  padding: 0 1rem;
 }
 
 .etape-card {
@@ -630,8 +639,6 @@
   display: flex;
   gap: 10px;
 }
-
-
 </style>
 
 <script>
@@ -652,6 +659,7 @@ document.querySelectorAll('.etape-header').forEach(header => {
   });
 });
 </script>
+
 
 
 <br>
