--- a/index.html
+++ b/index.html
@@ -674,6 +674,8 @@ document.querySelectorAll('.etape-header').forEach(header => {
     padding: 16px 0;
     -webkit-overflow-scrolling: touch;
   ">
+
+    <!-- Carte de Kevin -->
     <div style="
       flex: 0 0 280px;
       background: rgba(30, 45, 75, 0.85);
@@ -683,17 +685,16 @@ document.querySelectorAll('.etape-header').forEach(header => {
       box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
       text-align: center;
     ">
-      <img src="mavuba.jpg" alt="Rio Mavuba" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; margin-bottom: 16px;" />
-      <p style="color: #d0d7e6; font-style: italic;">"Antoine est goatesque."</p>
-      <p style="margin-top: 12px; font-weight: 600; color: #c4d0e7;"<p>
-      Rio Mavuba<br><br>
-  13 sélections en Équipe de France<br>
-  602 matchs professionnels<br>
-  Coach U15 R1 – FC Girondins de Bordeaux
-</p>
-
+      <img src="kevin.png" alt="Kevin Plantet" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; margin-bottom: 16px;" />
+      <p style="color: #d0d7e6; font-style: italic;">"Aujourd’hui la vidéo est un outil indispensable pour le football professionnel et amateur. L’analyse vidéo prend donc une place importante dans le travail quotidien des staffs. Nous avons en premier lieu l’analyse de notre équipe suite au match, ensuite l’analyse de l’adversaire et enfin les montages individuels. Une image valant mille mots, la vidéo est un support fondamental dans la gestion et le développement des équipes et des joueurs. J’ai pu travailler avec Antoine, il était responsable de l’analyse vidéo. Très vite, son travail a permis d’optimiser l’analyse du jeu et donc les performances de l’équipe."</p>
+      <p style="margin-top: 12px; font-weight: 600; color: #c4d0e7;">
+        Kevin Plantet<br><br>
+        Ex-préparateur physique, puis adjoint de Jocelyn Gourvennec à Guingamp, Bordeaux, Lille et Nantes<br>
+        Entraîneur principal de la TA Rennes qui évolue en Régional 1
+      </p>
     </div>
 
+    <!-- Carte d'Emmanuel -->
     <div style="
       flex: 0 0 280px;
       background: rgba(30, 45, 75, 0.85);
@@ -703,31 +704,20 @@ document.querySelectorAll('.etape-header').forEach(header => {
       box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
       text-align: center;
     ">
-      <img src="baysse.png" alt="Paul Baysse" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; margin-bottom: 16px;" />
-      <p style="color: #d0d7e6; font-style: italic;">"Antoine est goatesque."</p>
-      <p style="margin-top: 12px; font-weight: 600; color: #c4d0e7;"<p>
-      Paul Baysse<br><br>
-  336 matchs professionnels<br>
-  Coach U15 R1 – FC Girondins de Bordeaux
-  </p>
+      <img src="rennes.png" alt="Emmanuel Tanguy" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; margin-bottom: 16px;" />
+      <p style="color: #d0d7e6; font-style: italic;">"Antoine faisait partie intégrante de mon staff. C est un analyste pointilleux et performant dans le travail demandé. Ses retours vidéos, auprès du staff et des joueurs, ont été un réel soutien au quotidien pour l évolution de nos joueurs."</p>
+      <p style="margin-top: 12px; font-weight: 600; color: #c4d0e7;">
+        Emmanuel Tanguy<br><br>
+        Ex-directeur de Cap Girondins<br>
+        Ex-Coach des jeunes du Football Club Girondins de Bordeaux<br>
+        Coach des Jeunes du Stade Rennais
+      </p>
     </div>
 
-    <div style="
-      flex: 0 0 280px;
-      background: rgba(30, 45, 75, 0.85);
-      border-radius: 24px;
-      padding: 20px;
-      scroll-snap-align: start;
-      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
-      text-align: center;
-    ">
-      <img src="sylvain.png" alt="Sylvain Blaquart" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%; margin-bottom: 16px;" />
-      <p style="color: #d0d7e6; font-style: italic;">"Antoine est goatesque."</p>
-      <p style="margin-top: 12px; font-weight: 600; color: #c4d0e7;"<p>
-      Sylvain Blaquart<br><br>
-  Coach U19 N – Amiens SC
-  </p>
-    </div>
+  </div>
+</section>
+
+
   </div>
 </section>
 
