--- a/index.html
+++ b/index.html
@@ -690,7 +690,16 @@ document.querySelectorAll('.etape-header').forEach(header => {
       <p class="avis-text" style="color: #d0d7e6; font-style: italic;" data-full='Aujourd’hui la vidéo est un outil indispensable pour le football professionnel et amateur. L’analyse vidéo prend donc une place importante dans le travail quotidien des staffs. Nous avons en premier lieu l’analyse de notre équipe suite au match, ensuite l’analyse de l’adversaire et enfin les montages individuels. Une image valant mille mots, la vidéo est un support fondamental dans la gestion et le développement des équipes et des joueurs. J’ai pu travailler avec Antoine, il était responsable de l’analyse vidéo. Très vite, son travail a permis d’optimiser l’analyse du jeu et donc les performances de l’équipe.'>
         Aujourd’hui la vidéo est un outil indispensable pour le football professionnel et...
       </p>
-      <button class="toggle-avis" style="margin-top: 8px; background: none; border: none; color: #c4d0e7; cursor: pointer;">Lire plus</button>
+      <button class="toggle-avis" style="
+        margin-top: 8px; 
+        background: white; 
+        border: none; 
+        border-radius: 12px; 
+        padding: 6px 12px; 
+        color: #1d3557; 
+        cursor: pointer;
+        font-weight: 600;
+      ">Lire plus</button>
 
       <p style="margin-top: 12px; font-weight: 600; color: #c4d0e7;">
         Kevin Plantet<br><br>
@@ -714,7 +723,16 @@ document.querySelectorAll('.etape-header').forEach(header => {
       <p class="avis-text" style="color: #d0d7e6; font-style: italic;" data-full="Antoine faisait partie intégrante de mon staff. C'est un analyste pointilleux et performant dans le travail demandé. Ses retours vidéos, auprès du staff et des joueurs, ont été un réel soutien au quotidien pour l évolution de nos joueurs.">
         Antoine faisait partie intégrante de mon staff. C'est un analyste pointilleux et per...
       </p>
-      <button class="toggle-avis" style="margin-top: 8px; background: none; border: none; color: #c4d0e7; cursor: pointer;">Lire plus</button>
+      <button class="toggle-avis" style="
+        margin-top: 8px; 
+        background: white; 
+        border: none; 
+        border-radius: 12px; 
+        padding: 6px 12px; 
+        color: #1d3557; 
+        cursor: pointer;
+        font-weight: 600;
+      ">Lire plus</button>
 
       <p style="margin-top: 12px; font-weight: 600; color: #c4d0e7;">
         Emmanuel Tanguy<br><br>
@@ -741,7 +759,6 @@ document.querySelectorAll('.toggle-avis').forEach(button => {
   });
 });
 </script>
-
 
 
 
