--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
       opacity: 0.9;
     }
 
+    .header-image {
+      width: 100%;
+      max-height: 400px;
+      object-fit: cover;
+      display: block;
+      margin-top: 20px;
+      border-radius: 16px;
+    }
+
     section {
       max-width: 1100px;
       margin: 60px auto;
@@ -107,6 +116,7 @@
   <header>
     <h1>Lavande de Provence</h1>
     <p>Une passion familiale au cœur des Alpes de Haute-Provence</p>
+    <img src="lavande.jpg" alt="Champ de lavande" class="header-image">
   </header>
 
   <!-- Section Qui nous sommes -->
@@ -129,12 +139,12 @@
       <div class="product">
         <h3>Lavande fraîche</h3>
         <p>Récoltée à la main, idéale pour compositions florales ou distillation artisanale. Disponible pour particuliers et professionnels.</p>
-        <a href="#" class="btn">En savoir plus</a>
+        <a href="https://www.youtube.com" class="btn">En savoir plus</a>
       </div>
       <div class="product">
         <h3>Lavande séchée</h3>
         <p>Séchée naturellement au soleil, notre lavande conserve son parfum délicat et ses vertus apaisantes.</p>
-        <a href="#" class="btn">En savoir plus</a>
+        <a href="https://www.youtube.com" class="btn">En savoir plus</a>
       </div>
     </div>
   </section>
@@ -146,17 +156,17 @@
       <div class="product">
         <h3>Huiles essentielles</h3>
         <p>Extraites par distillation traditionnelle, elles révèlent toute la puissance aromatique et thérapeutique de la lavande.</p>
-        <a href="#" class="btn">Découvrir</a>
+        <a href="https://www.youtube.com" class="btn">Découvrir</a>
       </div>
       <div class="product">
         <h3>Savons artisanaux</h3>
         <p>Élaborés avec soin, nos savons doux et parfumés prennent soin de votre peau au quotidien.</p>
-        <a href="#" class="btn">Découvrir</a>
+        <a href="https://www.youtube.com" class="btn">Découvrir</a>
       </div>
       <div class="product">
         <h3>Sacs en lin parfumés</h3>
         <p>Parfaits pour parfumer vos placards, chaussures ou linge, tout en éloignant les insectes naturellement.</p>
-        <a href="#" class="btn">Découvrir</a>
+        <a href="https://www.youtube.com" class="btn">Découvrir</a>
       </div>
     </div>
   </section>
